# Optimized_data_loaders

./: .gitignore  README.md  TEST_SFT_ONLY.ipynb  collator.h  dataloader.h  distributed.h  libtorch_proxy_fulltest.ipynb  main.cpp  patch_compress.py  pipeline_1_ppo_full.ipynb  pipeline_2_dpo_full.ipynb  pipeline_3_grpo_full.ipynb  pipeline_libtorch.ipynb  pipeline_sft_multi_DATASETS.ipynb  prefetcher.h  tokenize_dataset.py
intruction_reasonning_data_loader/: .env  CMakeLists.txt  dataset.h  patch_compress.cpp  requirements.txt  sampler.h
reinforcement_learning_data_loader/: CMakeLists.txt  README.md  collator.h  dataloader.h  dataset.h  distributed.h  main.cpp  prefetcher.h  prepare_dataset.py  readme2.md  rollout_buffer.h  sampler.h  shard_manager.h  tokenize_dataset.py
sft_libtorch_only/: dataset.h  libtorch_dataloader.h  main_libtorch.cpp  tokenize_dataset.py
sft_libtorch_proxy/: CMakeLists.txt  distributed.h  libtorch_dataloader.h  libtorch_proxy_benchmark.ipynb  main_libtorch.cpp
sft_multiple_datasets/: CMakeLists.txt  collator.h  dataloader.h  dataset.h  distributed.h  main.cpp  prefetcher.h  requirements.txt  sampler.h  tokenize_dataset.py
